ignoring user-specific files

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ develop-eggs
 lib
 lib64
 __pycache__
+**/target
 
 # Installer logs
 pip-log.txt
@@ -30,7 +31,12 @@ nosetests.xml
 # Translations
 *.mo
 
-# Mr Developer
+# Mr Developer, PyCharm
 .mr.developer.cfg
 .project
 .pydevproject
+**/.idea
+
+# Virtualenvs
+**/venv
+
